--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ path = "src/lib.rs"
 clap = { version = "4.1.6", features = ["derive"] }
 thiserror = "1.0.38"
 
+[dev-dependencies]
+assert_cmd = "0.11.0"
+predicates = "1.0.0"
