--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "The cargo project, kvs, builds a command-line key-value store cli
 authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
 
 [[bin]]
-name = "kvs-client"
+name = "kvs"
 path = "src/bin/main.rs"
 
 [lib]
