--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ test = false
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
+serde_json = "1.0.104"
 thiserror = "1.0.38"
 
 [dev-dependencies]
