--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ test = false
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
 log = "0.4.20"
+ron = "0.8.1"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
 thiserror = "1.0.38"
 
