--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ test = false
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
 env_logger = "0.10.0"
+lazy_static = "1.4.0"
 log = "0.4.20"
 ron = "0.8.1"
 serde = { version = "1.0.188", features = ["derive"] }
