--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ test = false
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
+dotenv = "0.15.0"
 env_logger = "0.10.0"
 lazy_static = "1.4.0"
 log = "0.4.20"
