--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ version = { workspace = true }
 
 [[bin]]
 description = "kvs cli to interact with kvs library"
-name = "kvs-cli"
+name = "kvs"
 path = "src/bin/main.rs"
 
 [[bin]]
@@ -57,7 +57,9 @@ log = "0.4.20"
 ron = "0.8.1"
 
 [dev-dependencies]
-assert_cmd = "0.11.0"
+assert_cmd = "0.11"
+criterion = "0.3"
 predicates = "1.0.0"
-tempfile = "3.4.0"
-walkdir = "2.3.2"
+rand = "0.6.5"
+tempfile = "3.0.7"
+walkdir = "2.2.7"
