Use kvs 'cli' for default binary on cargo run

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace.package]
-name = "kvstore"
 authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
 description = "A  key-value store called kvs"
 edition = "2021"
+name = "kvstore"
 # licenses = ["MIT"]
 version = "1.2.0"
 
@@ -10,9 +10,10 @@ version = "1.2.0"
 authors.workspace = true
 description = "A  key-value store called kvs"
 # licenses.workspace = true
+edition = {workspace = true}
 name = "kvs"
-edition = { workspace = true }
-version = { workspace = true }
+version = {workspace = true}
+default-run = "kvs"
 
 [[bin]]
 description = "kvs cli to interact with kvs library"
@@ -37,21 +38,21 @@ test = false
 members = ["crates/kvs-client", "crates/kvs-server"]
 
 [dependencies]
-clap = { version = "4.1.6", features = ["derive"] }
+clap = {version = "4.1.6", features = ["derive"]}
 dotenv = "0.15.0"
 env_logger = "0.10.0"
 lazy_static = "1.4.0"
 log = "0.4.20"
 ron = "0.8.1"
-serde = { version = "1.0.188", features = ["derive"] }
+serde = {version = "1.0.188", features = ["derive"]}
 serde_json = "1.0.104"
 thiserror = "1.0.38"
 
 [workspace.dependencies]
-kvs = { path = "." }
-clap = { version = "4.1.6", features = ["derive"] }
+clap = {version = "4.1.6", features = ["derive"]}
 dotenv = "0.15.0"
 env_logger = "0.10.0"
+kvs = {path = "."}
 lazy_static = "1.4.0"
 log = "0.4.20"
 ron = "0.8.1"
