--- a/crates/kvs-client/Cargo.toml
+++ b/crates/kvs-client/Cargo.toml
@@ -1,11 +1,20 @@
 [package]
 name = "kvs-client"
-version = { workspace =  true }
+version = { workspace = true }
 edition = "2021"
-authors = { workspace =  true }
+authors = { workspace = true }
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 kvs = { workspace = true }
 clap = { workspace = true }
+
+[dev-dependencies]
+assert_cmd = "0.11"
+criterion = "0.3"
+predicates = "1.0.0"
+rand = "0.6.5"
+tempfile = "3.0.7"
+walkdir = "2.2.7"
