--- a/crates/kvs-server/Cargo.toml
+++ b/crates/kvs-server/Cargo.toml
@@ -6,6 +6,10 @@ authors = { workspace =  true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "kvs-server"
+path = "src/server.rs"
+
 [dependencies]
 kvs = { workspace = true }
 clap = { workspace = true }
