--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kvs"
 authors.workspace = true
-description.workspace = true 
+description.workspace = true
 edition = { workspace = true }
 version = { workspace = true }
 
@@ -10,15 +10,16 @@ name = "kvs"
 path = "src/bin/main.rs"
 
 [dependencies]
-clap = { version = "4.1.6", features = ["derive"] }
-dotenv = "0.15.0"
-env_logger = "0.10.0"
-lazy_static = "1.4.0"
-log = "0.4.20"
-ron = "0.8.1"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.104"
-thiserror = "1.0.38"
+clap = { workspace = true }
+dotenv = { workspace = true }
+env_logger = { workspace = true }
+lazy_static = { workspace = true }
+log = { workspace = true }
+ron = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
+sled = "0.34.7"
 
 [dev-dependencies]
 assert_cmd = "0.11"
