--- a/crates/kvs-server/Cargo.toml
+++ b/crates/kvs-server/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "kvs-server"
-version = { workspace =  true }
+version = { workspace = true }
 edition = "2021"
-authors = { workspace =  true }
+authors = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,3 +13,7 @@ path = "src/server.rs"
 [dependencies]
 kvs = { workspace = true }
 clap = { workspace = true }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = "0.3.18"
+env_logger = "0.11.2"
+uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
