--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ license = "MIT"
 [workspace]
 resolver = "2"
 
-members = ["crates/kvs-client", "crates/kvs-server", "lib"]
+members = ["crates/common", "crates/kvs-client", "crates/kvs-server", "lib"]
 default-members = ["lib", "crates/kvs-client"]
 
 [workspace.dependencies]
+anyhow = "1.0.80"
 clap = { version = "4.1.6", features = ["derive"] }
 dotenv = "0.15.0"
 env_logger = "0.10.0"
@@ -23,4 +24,4 @@ ron = "0.8.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.104"
 thiserror = "1.0.38"
-
+prost = "0.12.3"
