--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Free up space on runner
+      run: |
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /opt/ghc
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+    - name: Install protoc
+      run: |
+        sudo apt-get install -y protobuf-compiler
+        protoc --version
+
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2.5.0
+      with:
+        cache-on-failure: true
+        cache-all-crates: true
+
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+      
     - name: Run tests
       run: cargo test --verbose
