--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         sudo apt-get install -y protobuf-compiler
         protoc --version
+        protoc --experimental_allow_proto3_optional message.proto
 
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2.5.0
