--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -23,8 +23,13 @@ sled = "0.34.7"
 
 [dev-dependencies]
 assert_cmd = "0.11"
-criterion = "0.3"
+criterion = { version = "0.4", features = ["html_reports"] }
 predicates = "1.0.0"
 rand = "0.6.5"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
+
+[[bench]]
+name = "cold_start_get"
+# Disable rust-bench harness and prefer criterion's instead
+harness = false
