--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -20,6 +20,11 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 sled = "0.34.7"
+regex = "1.11.1"
+# tracing = "0.1.41"
+# tracing-subscriber = "0.3.19"
+bytes = "1.10.1"
+rayon = "1.10.0"
 
 [dev-dependencies]
 assert_cmd = "0.11"
